--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">2.</strong> Overview</a></li><li class="chapter-item expanded "><a href="faq.html"><strong aria-hidden="true">3.</strong> FAQ</a></li><li class="chapter-item expanded "><a href="tips_and_tricks.html"><strong aria-hidden="true">4.</strong> Tips &amp; Tricks</a></li><li class="chapter-item expanded "><a href="troubleshooting.html"><strong aria-hidden="true">5.</strong> Troubleshooting</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">6.</strong> Glossary</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">7.</strong> Contributing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">2.</strong> Overview</a></li><li class="chapter-item expanded "><a href="faq.html"><strong aria-hidden="true">3.</strong> FAQ</a></li><li class="chapter-item expanded "><a href="sdk.html"><strong aria-hidden="true">4.</strong> Controlling pi-top Hardware</a></li><li class="chapter-item expanded "><a href="tips_and_tricks.html"><strong aria-hidden="true">5.</strong> Tips &amp; Tricks</a></li><li class="chapter-item expanded "><a href="troubleshooting.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">7.</strong> Glossary</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">8.</strong> Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -226,6 +226,24 @@ until the Raspberry Pi has halted before powering off the pi-top hardware via th
 <h2><a class="header" href="#how-does-pi-topos-handle-versioning" id="how-does-pi-topos-handle-versioning">How does pi-topOS handle versioning?</a></h2>
 <p>See the glossary for more information about the previous versions and their respective names.</p>
 <p>pi-topOS is based on Raspberry Pi OS, which is based on Debian. Debian changes every ~18 months.</p>
+<h1><a class="header" href="#controlling-pi-top-hardware" id="controlling-pi-top-hardware">Controlling pi-top Hardware</a></h1>
+<p>There are many ways to interact with hardware. However, pi-top have worked hard to offer a coherent programming experience for all.
+Consequently, this has led to the development of software development kits (SDKs).</p>
+<p>Currently, it is possible to interact with a pi-top with 2 different SDKs:</p>
+<ul>
+<li><a href="https://github.com/pi-top/pi-top-Python-SDK">Python SDK</a></li>
+<li><a href="https://github.com/pi-top/pi-top-4-.NET-SDK">.NET SDK</a></li>
+</ul>
+<p>Check out the examples for each:</p>
+<ul>
+<li>Python examples
+<ul>
+<li><a href="http://docs.pi-top.com/en/stable/recipes_api.html">Documentation Recipes</a></li>
+<li><a href="https://github.com/pi-top/pi-top-4-.NET">In GitHub Repository</a></li>
+</ul>
+</li>
+<li><a href="https://github.com/pi-top/pi-top-4-.NET">.NET samples</a></li>
+</ul>
 <h1><a class="header" href="#tips--tricks" id="tips--tricks">Tips &amp; Tricks</a></h1>
 <p>This section seeks to offer useful tips for working with pi-topOS, although many of these tips are more broadly useful.</p>
 <h3><a class="header" href="#aliases" id="aliases">Aliases</a></h3>
@@ -349,7 +367,7 @@ print(&quot;code here&quot;)
 </ul>
 </li>
 </ul>
-<p>Use GitHub's Markdown to style your Issue. For example, if you are providing a Python code snippet, write it like so:</p>
+<p>Use <a href="https://guides.github.com/pdfs/markdown-cheatsheet-online.pdf">GitHub's Markdown</a> to style your Issue. For example, if you are providing a Python code snippet, write it like so:</p>
 <pre><code>```python
 print(&quot;code here&quot;)
 ```
