--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">2.</strong> Overview</a></li><li class="chapter-item expanded "><a href="faq.html"><strong aria-hidden="true">3.</strong> FAQ</a></li><li class="chapter-item expanded "><a href="sdk.html"><strong aria-hidden="true">4.</strong> Controlling pi-top Hardware</a></li><li class="chapter-item expanded "><a href="tips_and_tricks.html"><strong aria-hidden="true">5.</strong> Tips &amp; Tricks</a></li><li class="chapter-item expanded "><a href="troubleshooting.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">7.</strong> Glossary</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">8.</strong> Contributing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> 🏠 Home</a></li><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">2.</strong> 👁 Overview</a></li><li class="chapter-item expanded "><a href="faq.html"><strong aria-hidden="true">3.</strong> 🙋 FAQ</a></li><li class="chapter-item expanded "><a href="sdk.html"><strong aria-hidden="true">4.</strong> 🤖 Controlling pi-top Hardware</a></li><li class="chapter-item expanded "><a href="tips_and_tricks.html"><strong aria-hidden="true">5.</strong> 💁 Tips &amp; Tricks</a></li><li class="chapter-item expanded "><a href="troubleshooting.html"><strong aria-hidden="true">6.</strong> 🕵️ Troubleshooting</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">7.</strong> 📘 Glossary</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">8.</strong> ✍️ Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -169,7 +169,7 @@
 <p>Hello and welcome to pi-topOS's official documentation.</p>
 <p>Please note that this documentation is currently under active construction.</p>
 <p>We ask that you bear with us while we work to assemble this document!</p>
-<h1><a class="header" href="#overview" id="overview">Overview</a></h1>
+<h1><a class="header" href="#-overview" id="-overview">👁 Overview</a></h1>
 <p>pi-topOS is the recommended way to use your pi-top.</p>
 <p>pi-topOS is built on top of Raspberry Pi OS (formerly Raspbian), so a lot of things are identical.
 However there are some differences.</p>
@@ -218,7 +218,7 @@ For pi-top devices with an onboard battery, it will not be possible to determine
 <p>If you are using an unsupported OS, it is recommended that you power off your Raspberry Pi via the start menu and wait
 until the Raspberry Pi has halted before powering off the pi-top hardware via the hardware power button.</p>
 </blockquote>
-<h1><a class="header" href="#faqs" id="faqs">FAQs</a></h1>
+<h1><a class="header" href="#-faqs" id="-faqs">🙋 FAQs</a></h1>
 <h2><a class="header" href="#what-should-i-do-when-im-having-issues-updating" id="what-should-i-do-when-im-having-issues-updating">What should I do when I'm having issues updating?</a></h2>
 <p>Check out our <a href="https://knowledgebase.pi-top.com/knowledge/error-updating-sirius">knowledge base article</a> for guidance with updating issues.</p>
 <h2><a class="header" href="#why-does-my-screen-resolution-keep-resetting-on-reboot" id="why-does-my-screen-resolution-keep-resetting-on-reboot">Why does my screen resolution keep resetting on reboot?</a></h2>
@@ -226,7 +226,7 @@ until the Raspberry Pi has halted before powering off the pi-top hardware via th
 <h2><a class="header" href="#how-does-pi-topos-handle-versioning" id="how-does-pi-topos-handle-versioning">How does pi-topOS handle versioning?</a></h2>
 <p>See the glossary for more information about the previous versions and their respective names.</p>
 <p>pi-topOS is based on Raspberry Pi OS, which is based on Debian. Debian changes every ~18 months.</p>
-<h1><a class="header" href="#controlling-pi-top-hardware" id="controlling-pi-top-hardware">Controlling pi-top Hardware</a></h1>
+<h1><a class="header" href="#-controlling-pi-top-hardware" id="-controlling-pi-top-hardware">🤖 Controlling pi-top Hardware</a></h1>
 <p>There are many ways to interact with hardware. However, pi-top have worked hard to offer a coherent programming experience for all.
 Consequently, this has led to the development of software development kits (SDKs).</p>
 <p>Currently, it is possible to interact with a pi-top with 2 different SDKs:</p>
@@ -244,7 +244,7 @@ Consequently, this has led to the development of software development kits (SDKs
 </li>
 <li><a href="https://github.com/pi-top/pi-top-4-.NET">.NET samples</a></li>
 </ul>
-<h1><a class="header" href="#tips--tricks" id="tips--tricks">Tips &amp; Tricks</a></h1>
+<h1><a class="header" href="#-tips--tricks" id="-tips--tricks">💁 Tips &amp; Tricks</a></h1>
 <p>This section seeks to offer useful tips for working with pi-topOS, although many of these tips are more broadly useful.</p>
 <h3><a class="header" href="#aliases" id="aliases">Aliases</a></h3>
 <p>Aliases are a great way to shorten the amount you need to write in a terminal if you find yourself running the same commands over and over.</p>
@@ -259,7 +259,7 @@ However, take care not to accidentally use the same name as a command on your sy
 <p>Usage:</p>
 <pre><code class="language-bash">pt-write &quot;Hello World&quot;
 </code></pre>
-<h1><a class="header" href="#troubleshooting" id="troubleshooting">Troubleshooting</a></h1>
+<h1><a class="header" href="#-troubleshooting" id="-troubleshooting">🕵️ Troubleshooting</a></h1>
 <p>This section of the documentation aims to provide useful information to assist with identifying issues with pi-topOS.
 Be sure to check out our FAQ section, that aims to address the most common questions/problems that people have.</p>
 <h2><a class="header" href="#collecting-and-reviewing-system-information" id="collecting-and-reviewing-system-information">Collecting and Reviewing System Information</a></h2>
@@ -288,7 +288,7 @@ Be sure to check out our FAQ section, that aims to address the most common quest
 <p>Shows the current state of pi-top software provided as systemd services, as well as the version of each pi-top software package.</p>
 <h4><a class="header" href="#pi-top-device-information" id="pi-top-device-information">pi-top Device Information</a></h4>
 <p>Provides hardware-level detail about the state of the pi-top hub.</p>
-<h1><a class="header" href="#glossary" id="glossary">Glossary</a></h1>
+<h1><a class="header" href="#-glossary" id="-glossary">📘 Glossary</a></h1>
 <h2><a class="header" href="#sirius" id="sirius">Sirius</a></h2>
 <p>Latest version of pi-topOS.</p>
 <h2><a class="header" href="#polaris" id="polaris">Polaris</a></h2>
@@ -297,7 +297,7 @@ Be sure to check out our FAQ section, that aims to address the most common quest
 <p>Current version of Debian that pi-topOS Sirius is based on.</p>
 <h2><a class="header" href="#bullseye" id="bullseye">Bullseye</a></h2>
 <p>Upcoming version of Debian that the next version of pi-topOS will be based on.</p>
-<h1><a class="header" href="#contributing-to-pi-topos" id="contributing-to-pi-topos">Contributing to pi-topOS</a></h1>
+<h1><a class="header" href="#-contributing-to-pi-topos" id="-contributing-to-pi-topos">✍️ Contributing to pi-topOS</a></h1>
 <h2><a class="header" href="#want-to-contribute-read-on-for-guidelines-best-practices-links-and-more" id="want-to-contribute-read-on-for-guidelines-best-practices-links-and-more">Want to contribute? Read on for guidelines, best practices, links, and more!</a></h2>
 <p>There are a tonne of ways that an enthusiastic maker, student or professional can contribute!</p>
 <h3><a class="header" href="#cool-project" id="cool-project">Cool Project?</a></h3>
