--- a/overview.html
+++ b/overview.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Overview - pi-topOS</title>
+        <title>👁 Overview - pi-topOS</title>
         
         
 
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> Home</a></li><li class="chapter-item expanded "><a href="overview.html" class="active"><strong aria-hidden="true">2.</strong> Overview</a></li><li class="chapter-item expanded "><a href="faq.html"><strong aria-hidden="true">3.</strong> FAQ</a></li><li class="chapter-item expanded "><a href="sdk.html"><strong aria-hidden="true">4.</strong> Controlling pi-top Hardware</a></li><li class="chapter-item expanded "><a href="tips_and_tricks.html"><strong aria-hidden="true">5.</strong> Tips &amp; Tricks</a></li><li class="chapter-item expanded "><a href="troubleshooting.html"><strong aria-hidden="true">6.</strong> Troubleshooting</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">7.</strong> Glossary</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">8.</strong> Contributing</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="index.html"><strong aria-hidden="true">1.</strong> 🏠 Home</a></li><li class="chapter-item expanded "><a href="overview.html" class="active"><strong aria-hidden="true">2.</strong> 👁 Overview</a></li><li class="chapter-item expanded "><a href="faq.html"><strong aria-hidden="true">3.</strong> 🙋 FAQ</a></li><li class="chapter-item expanded "><a href="sdk.html"><strong aria-hidden="true">4.</strong> 🤖 Controlling pi-top Hardware</a></li><li class="chapter-item expanded "><a href="tips_and_tricks.html"><strong aria-hidden="true">5.</strong> 💁 Tips &amp; Tricks</a></li><li class="chapter-item expanded "><a href="troubleshooting.html"><strong aria-hidden="true">6.</strong> 🕵️ Troubleshooting</a></li><li class="chapter-item expanded "><a href="glossary.html"><strong aria-hidden="true">7.</strong> 📘 Glossary</a></li><li class="chapter-item expanded "><a href="contributing.html"><strong aria-hidden="true">8.</strong> ✍️ Contributing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -163,7 +163,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#overview" id="overview">Overview</a></h1>
+                        <h1><a class="header" href="#-overview" id="-overview">👁 Overview</a></h1>
 <p>pi-topOS is the recommended way to use your pi-top.</p>
 <p>pi-topOS is built on top of Raspberry Pi OS (formerly Raspbian), so a lot of things are identical.
 However there are some differences.</p>
