deploy: eff9c6796c73f9a6090450ac264f9558149d5ced

--- a/index.html
+++ b/index.html
@@ -164,9 +164,20 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#pi-topos---official-documentation" id="pi-topos---official-documentation">pi-topOS - Official Documentation</a></h1>
+<blockquote>
+<p><strong>Please note that this documentation is currently under active construction.</strong>
+We ask that you bear with us while we work to assemble this document!</p>
+</blockquote>
 <p>Hello and welcome to pi-topOS's official documentation.</p>
-<p>Please note that this documentation is currently under active construction.</p>
-<p>We ask that you bear with us while we work to assemble this document!</p>
+<p>This is an evolving document that seeks to describe the current state of pi-topOS.
+As updates are released, the way that the OS behaves will change, and so too will this document.</p>
+<p>Where there is notable information about earlier versions (such as serious bugs and usability issues), this document
+will seek to provide useful information.</p>
+<blockquote>
+<p>Unless you have a very specific issue, you will need to make sure that you are using the latest version of pi-topOS
+and its software. Otherwise, you may find that this documentation does not accurately reflect what you are actually
+using.</p>
+</blockquote>
 
                     </main>
 
